<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.start.TeamStartFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeToRefresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/big_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/team_start_input_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputStartNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonFindTeam"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/team_start_find" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonClear"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_padding"
                        android:text="@string/team_start_clear" />
                </LinearLayout>

                <TextView
                    android:id="@+id/teamInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:text="@string/team_start_info_placeholder"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <TextView
                    android:id="@+id/scanStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:text="@string/team_start_scan_placeholder"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/scannedTagsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/item_scanned_tag" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:enabled="false"
                    android:text="@string/team_start_button" />

                <TextView
                    android:id="@+id/pendingHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:text="@string/team_start_pending_header"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/pendingList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/item_team_start" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
